# marin

./: AGENTS.md  pyproject.toml
.github/workflows/: marin-cleanup-tpus.yaml
data_browser/: pyproject.toml
experiments/tutorials/: train_300M_model_bignode.py
infra/: marin-bignode.yaml
lib/fray/src/fray/v1/cluster/ray/: dashboard.py
lib/fray/src/fray/v2/ray_backend/: dashboard.py  dashboard_proxy.py
lib/iris/src/iris/: marin_fs.py
lib/iris/tests/: test_marin_fs.py
lib/levanter/src/levanter/store/: cache.py
lib/marin/src/marin/cluster/: ray.py
lib/marin/src/marin/training/: training.py
scripts/ray/: cleanup_workers.py  cluster.py
