[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-browser"
version = "0.1.0"
description = "Marin Data Browser"
authors = [{ name = "Marin Team" }]
requires-python = "==3.12.*"
dependencies = [
    "fsspec>=2024.9.0",
    "zstandard>=0.18.0",
    "flask>=3.1.1",
    "pyarrow>=17.0.0",
    "gcsfs>=2024.9.0.post1",
    "pandas>=2.2.2",
    "draccus>=0.9.3",
    "s3fs>=2024.12.0",
    "gunicorn>=23.0.0",
    "flask-limiter>=3.10.1",
    "PyYAML>=6.0",
]

[dependency-groups]
dev = [
    "honcho>=2.0.0",
]

[tool.hatch.build.targets.wheel]
# Explicitly declare which top-level modules to include so Hatch can
# build the editable wheel even though this project is an app (no package dir).
only-include = [
    "server.py",
    "wsgi.py",
]
